--- a/src/app/home/components/board/board.component.html
+++ b/src/app/home/components/board/board.component.html
@@ -1,2 +1,5 @@
 <p>board works!</p>
 <h1>{{board.title}}</h1>
+<ul>
+    <tr-list *ngFor="let list of board.lists" [titleList]="list.title"></tr-list>
+</ul>
