--- a/src/app/home/components/list/list.component.html
+++ b/src/app/home/components/list/list.component.html
@@ -1,3 +1,2 @@
 <h3>{{titleList}}</h3>
-<!-- <h3>{{cards['title']}}</h3> -->
-<tr-card *ngFor="let card of cards" [titleCard]="card.title"></tr-card>
+<tr-card *ngFor="let card of cardsList" [titleCard]="card.title"></tr-card>
