--- a/src/app/home/components/board/board.component.html
+++ b/src/app/home/components/board/board.component.html
@@ -1,9 +1,10 @@
-<p>board works!</p>
-<h1>{{ board.title }}</h1>
+<!-- <p>board works!</p> -->
+<h1 class="title title__board">{{board.title }}</h1>
 <ul>
   <tr-list
     *ngFor="let list of board.lists"
     [titleList]="list.title"
     [cardsList]="list.cards"
   ></tr-list>
+  <button class="btn btn__add-board">+Добавить список</button>
 </ul>
