--- a/src/app/home/components/list/list.component.html
+++ b/src/app/home/components/list/list.component.html
@@ -1,2 +1,3 @@
-<h3>{{titleList}}</h3>
+<h2 class="title title_list">{{titleList}}</h2>
 <tr-card *ngFor="let card of cardsList" [titleCard]="card.title"></tr-card>
+<button class="btn btn__add-card">+Добавить карточку</button>
