--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    background-color: blanchedalmond;
-    font-family: 'Comfortaa', cursive;  
+  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+:root {
+    --color_background:#05051c;
+    --color_btn: #4A4E69;
+    --color_border: #9A8C98;
+    --color_component: #ffffff;
+    --color_hover_component: #ffece8;
+    --color_text: #F2E9E4;
 }
+body{
+    background-color: var(--color_background);
+    font-family: 'Raleway', sans-serif;
+}
+ul{
+    display: flex;
+}
+.title{
+    text-align: center;
+    color: var(--color_text)
+}
+
+.btn{
+    cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+    width: 250px;    
+    border: 0;
+    background-color: var(--color_btn);
+    color: var(--color_text);
+    font-size: large;
+}
+
