--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -36,3 +36,11 @@
     border: 3px solid var(--color_border);
     border-radius: 45px;
 } 
+
+tr-modal-window{
+    position: absolute;
+}
+
+tr-board-form{
+    position: absolute;
+}
