--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -1,2 +1,4 @@
-<!-- <p>card works!</p> -->
-<h3 class="text text_card">{{titleCard}}</h3>
+<div class="container__body-card">
+  <h2 class="title title__card">{{ titleCard }}</h2>
+  <button class="btn btn__del-card" (click)="deleteCard()">x</button>
+</div>
