--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -1,12 +1,12 @@
-.wrapper__boards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .title__boards{
     margin-top: 40px;
     margin-bottom: 40px;   
+}
+
+.container__body-boards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .board{
@@ -30,17 +30,39 @@
     background-color: var(--color_hover_component);
 }
 
-.btn__add-board{
+.title__board{
     width: 200px;
+    color: black;
+    word-break: break-all;
+}
+
+.btn__add-board{
+    width: 250px;
     height: 100px;
     border: 3px solid var(--color_border);
     border-radius: 45px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    
 } 
-
-tr-modal-window{
-    position: absolute;
+   
+.form-create-board{
+    background-color: rgba(240, 248, 255, 0.244);
+    width: 260px; 
+    height: 150px;  
+    border-radius: 8px;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly; 
 }
 
-tr-board-form{
-    position: absolute;
+.title-form{
+    font-size: large;
+    font-weight: bold;
+}
+
+.btn__create-board{
+    background-color:rgb(0 255 188 / 36%);
+    border-radius: 30px;
 }
