--- a/src/app/home/components/list/list.component.scss
+++ b/src/app/home/components/list/list.component.scss
@@ -1,4 +1,4 @@
-:host(tr-list){
+.container__body-list{
     border: 2px solid var(--color_border);
     margin-right: 50px;
     width: 250px;
@@ -7,7 +7,52 @@
     border-radius: 25px;
 }
 
+.btn__del-list{
+    background-color: rgba(255, 0, 0, 0.466);
+    height: 18px;
+    width: 20px;
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: smaller;
+}
+
+.title__list{
+    word-wrap: break-word;   
+    width: 250px;
+    margin-top: 0;
+}
+
+.title__list::after{
+    content:url("../../../../assets/img/edit-pen.png");
+    padding-left: 10px;
+}
+
+.title__list:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    transition: 0.5;
+}
+
+.input__edit-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+    margin-bottom: 25px;
+    height: 20px;
+}
+
 .btn__add-card{
     border-radius: 10px;     
     margin-bottom: 20px;
+}
+
+.input__create-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    height: 20px;
 }
