--- a/src/app/home/components/list/list.component.html
+++ b/src/app/home/components/list/list.component.html
@@ -7,8 +7,8 @@
     #inputEditList
     class="input__edit-list"
     *ngIf="editingList"
-    (keydown.enter)="editList(inputEditList.getValue())"
-    (blur)="editList(inputEditList.getValue())"
+    (enter)="editList(inputEditList.getValue())"
+    (lostFocus)="editList(inputEditList.getValue())"
     [previousValue]="titleList"
   ></tr-simple-input-form>
   <tr-card
@@ -25,7 +25,7 @@
     #inputCreateCard
     class="input__create-card"
     *ngIf="creatingCard"
-    (keydown.enter)="createCard(inputCreateCard.getValue())"
-    (blur)="createCard(inputCreateCard.getValue())"
+    (enter)="createCard(inputCreateCard.getValue())"
+    (lostFocus)="createCard(inputCreateCard.getValue())"
   ></tr-simple-input-form>
 </div>
