--- a/src/app/home/components/card/card.component.scss
+++ b/src/app/home/components/card/card.component.scss
@@ -1,20 +1,8 @@
-// .drop_zone{
-//     background-color: rgba(0, 106, 255, 0.466);
-//     height: 35px; 
-//     width: 250px;
-//     border-radius: 5px;
-//     text-align: center;
-//     margin-bottom: 20px;
-//     border: 2px dashed #333;
-// }
-
-.drop{
-    border: 2px dashed rgb(255, 0, 0);
-    height: 200px;
-    width: 200px;
-  }
-
-.container__body-card{
+.content-card{
+    background-color: var(--color_component);   
+    border-radius: 6px;
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 25px;
 }
 
@@ -23,24 +11,19 @@
     background-color: var(--color_hover_component);
 }
 
-.content-card{
-    background-color: var(--color_component);   
-    border-radius: 6px;
-    display: flex;
-    justify-content: space-between;
-}
-
 .title__card{
     color: black;
     margin: 0;
     margin-left: 5px;
     font-size: 20px;
+    font-weight: bold;
     word-break: break-all;
+    width: 100%;
 }
 
 .btn__del-card{
-   border-radius: 0;
-   width: 30px;
-   background-color: rgba(4, 60, 110, 0.071);
-   color: black;
+    border-radius: 0;
+    width: 30px;
+    background-color: rgba(4, 60, 110, 0.071);
+    color: black;
 }
